feat: add fonts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,3 +8,15 @@ import Layout from "../layouts/Layout.astro";
     <p>🚧 WIP</p>
   </main>
 </Layout>
+
+<style>
+  main {
+    font-size: 1.6rem;
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
+      segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto,
+      arial, sans-serif;
+
+    display: grid;
+    place-items: center;
+  }
+</style>
