--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import "@fontsource/outfit";
 ---
 
 <Layout title="Welcome to Astro">
@@ -8,3 +9,9 @@ import Layout from "@layouts/Layout.astro";
     <p>🚧 WIP</p>
   </main>
 </Layout>
+
+<style>
+  main {
+    font-family: Outfit, sans-serif;
+  }
+</style>
