feat: change pages titles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro">
+<Layout title="Home">
   <main>
     <h1>Hello World!</h1>
     <p>🚧 WIP</p>
