--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -3,7 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import "@fontsource/outfit";
 ---
 
-<Layout title="Welcome to Astro">
+<Layout title="QR Code Component">
   <main>
     <h1>Hello World!</h1>
     <p>🚧 WIP</p>
