feat: add basic styling

--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -11,7 +11,17 @@ import "@fontsource/outfit";
 </Layout>
 
 <style>
+  :root {
+    --background-color: rgb(212, 224, 238);
+    --foreground-color: rgb(255, 255, 255);
+    --heading-color: rgb(23, 33, 48);
+    --text-color: rgb(151, 155, 159);
+  }
+
   main {
     font-family: Outfit, sans-serif;
+
+    width: 100vw;
+    height: 100vh;
   }
 </style>
