--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -1,12 +1,19 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import "@fontsource/outfit";
+import QRCode from "@assets/qr-code-component-image-qr-code.png";
 ---
 
 <Layout title="QR Code Component">
   <main>
-    <h1>Hello World!</h1>
-    <p>🚧 WIP</p>
+    <div class="card">
+      <img src={QRCode} alt="" />
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
   </main>
 </Layout>
 
