refactor: remove body from layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Home">
-  <main>
-    <h1>Hello World!</h1>
-    <p>🚧 WIP</p>
-  </main>
+  <body>
+    <main>
+      <h1>Hello World!</h1>
+      <p>🚧 WIP</p>
+    </main>
+  </body>
 </Layout>
 
 <style>
