--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -5,16 +5,18 @@ import QRCode from "@assets/qr-code-component-image-qr-code.png";
 ---
 
 <Layout title="QR Code Component">
-  <main>
-    <div class="card">
-      <img src={QRCode} alt="" />
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
-  </main>
+  <body>
+    <main>
+      <div class="card">
+        <img src={QRCode} alt="" />
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
+  </body>
 </Layout>
 
 <style>
@@ -25,7 +27,7 @@ import QRCode from "@assets/qr-code-component-image-qr-code.png";
     --text-color: rgb(151, 155, 159);
   }
 
-  main {
+  body {
     font-family: Outfit, sans-serif;
 
     width: 100vw;
