feat: add alt text

--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -8,7 +8,7 @@ import QRCode from "@assets/qr-code-component-image-qr-code.png";
   <body>
     <main>
       <div class="card">
-        <img src={QRCode} alt="" />
+        <img src={QRCode} alt="QR Code" />
         <h1>Improve your front-end skills by building projects</h1>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
