--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from "../layouts/Layout.astro";
 </Layout>
 
 <style>
-  main {
+  body {
     font-size: 1.6rem;
     font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
       segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto,
