feat: add background color

--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -32,5 +32,7 @@ import QRCode from "@assets/qr-code-component-image-qr-code.png";
 
     width: 100vw;
     height: 100vh;
+
+    background-color: var(--background-color);
   }
 </style>
