--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,5 +16,64 @@ const { title } = Astro.props;
     <title>{title} | Frontend Mentor</title>
   </head>
   <slot />
+  <style is:global>
+    /**
+     * RESET
+     */
 
+    blockquote,
+    dl,
+    dd,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    hr,
+    figure,
+    p,
+    pre {
+      margin: 0;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-size: inherit;
+      font-weight: inherit;
+    }
+
+    ol,
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    img,
+    svg,
+    video,
+    canvas,
+    audio,
+    iframe,
+    embed,
+    object {
+      display: block;
+      vertical-align: middle;
+    }
+
+    *,
+    ::before,
+    ::after {
+      margin: 0;
+      padding: 0;
+      border-width: 0;
+      border-style: solid;
+      border-color: theme("borderColor.DEFAULT", currentColor);
+    }
+  </style>
 </html>
