refactor: use rem instead of px

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,10 @@ const { title } = Astro.props;
   </head>
   <slot />
   <style is:global>
+    :root {
+      font-size: 62.5%;
+    }
+
     /**
      * RESET
      */
@@ -73,7 +77,6 @@ const { title } = Astro.props;
       padding: 0;
       border-width: 0;
       border-style: solid;
-      border-color: theme("borderColor.DEFAULT", currentColor);
     }
   </style>
 </html>
