--- a/src/pages/qr-code-component/index.astro
+++ b/src/pages/qr-code-component/index.astro
@@ -31,8 +31,8 @@ import "@fontsource/outfit/variable.css";
   body {
     font-family: OutfitVariable, sans-serif;
     font-weight: normal;
-    font-size: 15px;
-    line-height: 19px;
+    font-size: 1.5rem;
+    line-height: 1.9rem;
     color: var(--text-color);
 
     width: 100vw;
@@ -62,8 +62,8 @@ import "@fontsource/outfit/variable.css";
   .card h1 {
     color: var(--heading-color);
     font-weight: 700;
-    font-size: 22px;
-    line-height: 28px;
+    font-size: 2.2rem;
+    line-height: 2.8rem;
     text-align: center;
 
     margin-top: 8px;
