--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,71 +1,26 @@
 ---
+import Button from "@components/Button";
+import Card from "@components/Card.astro";
 import Layout from "@layouts/Layout.astro";
+import QRCode from "@components/QRCode";
 
-import QRCode from "@assets/qr-code-component-image-qr-code.png";
-import "@fontsource/outfit/variable.css";
+import QRCodeURL from "@assets/frontend-mentor.webp";
 ---
 
 <Layout title="QR Code Component">
-  <body>
-    <main>
-      <div class="card">
-        <img class="card__qr-code" src={QRCode} alt="QR Code" />
-        <h1>Improve your front-end skills by building projects</h1>
-        <p class="card__text">
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
-    </main>
-  </body>
+  <Card>
+    <QRCode codeURL={QRCodeURL} />
+    <h1>Improve your front-end skills by building projects</h1>
+    <p class="card__text">
+      Scan the QR code to visit Frontend Mentor and take your coding skills to
+      the next level
+    </p>
+    <Button as="a" href="/create">Create your QR Code</Button>
+  </Card>
 </Layout>
 
 <style>
-  :root {
-    --background-color: rgb(212, 224, 238);
-    --foreground-color: rgb(255, 255, 255);
-    --heading-color: rgb(31, 49, 79);
-    --text-color: rgb(125, 136, 158);
-  }
-
-  body {
-    font-family: OutfitVariable, sans-serif;
-    font-weight: normal;
-    font-size: 1.5rem;
-    line-height: 1.9rem;
-    color: var(--text-color);
-
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    place-items: center;
-
-    background-color: var(--background-color);
-  }
-
-  .card {
-    border-radius: 24px;
-    width: 280px;
-    padding: 16px 16px 40px;
-    display: grid;
-    gap: 16px;
-
-    background-color: var(--foreground-color);
-    box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.06);
-  }
-
-  .card__qr-code {
-    border-radius: 16px;
-    width: 100%;
-  }
-
-  .card h1 {
-    color: var(--heading-color);
-    font-weight: 700;
-    font-size: 2.2rem;
-    line-height: 2.8rem;
-    text-align: center;
-
+  h1 {
     margin-top: 8px;
   }
 
