--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,12 +8,18 @@
 <style>
   .card {
     border-radius: 24px;
-    width: 280px;
     padding: 16px;
+    width: 80%;
     display: grid;
     gap: 16px;
 
     background-color: var(--foreground-color);
     box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.06);
+  }
+
+  @media (min-width: 360px) {
+    .card {
+      width: 280px;
+    }
   }
 </style>
