feat: add download button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import QRCodeURL from "@assets/frontend-mentor.webp";
 
 <Layout title="QR Code Component">
   <Card>
-    <QRCode codeURL={QRCodeURL} />
+    <QRCode client:load codeURL={QRCodeURL} />
     <h1>Improve your front-end skills by building projects</h1>
     <p class="card__text">
       Scan the QR code to visit Frontend Mentor and take your coding skills to
