--- a/src/components/QRCode/QRCode.module.css
+++ b/src/components/QRCode/QRCode.module.css
@@ -1,3 +1,7 @@
+.qr-code-wrapper {
+  position: relative;
+}
+
 .qr-code {
   display: grid;
   position: relative;
@@ -44,4 +48,25 @@
 .qr-code>img {
   width: 80%;
   z-index: 1;
+}
+
+.download {
+  padding: 6px;
+  border-radius: 50%;
+
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+
+  background-color: var(--foreground-color);
+  transition: background 75ms ease-in-out;
+}
+
+.download:hover {
+  cursor: pointer;
+  background-color: var(--background-color);
+}
+
+.download>img {
+  width: 25px;
 }
