--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -112,5 +112,9 @@ const { title } = Astro.props;
       line-height: 2.8rem;
       text-align: center;
     }
+
+    .transclude-shadow-container {
+      display: none; /* fix for firefox */
+    }
   </style>
 </html>
